refactoring plus comments so i dont have to explain to everyone